--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
 
+    // Flexbox
+    implementation 'com.google.android:flexbox:2.0.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
