--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
 
         </activity>
         <activity android:name=".views.QuestionsListActivity">
+
+        </activity>
+        <activity android:name=".views.TagsListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
