--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,20 @@
 
         </activity>
         <!--<activity android:name=".views.QuestionsListActivity">-->
-        <activity android:name=".views.QuestionFormActivity">
+        <activity android:name=".views.QuestionsListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".views.QuestionFormActivity">
+
+        </activity>
+
+        <activity android:name=".views.AnswerFormActivity">
+
         </activity>
     </application>
 
