--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         <activity android:name=".views.AnswerFormActivity">
 
         </activity>
+
+        <activity android:name=".views.QuestionDetailActivity">
+
+        </activity>
     </application>
 
 </manifest>
