--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mtaafe">
+    package="com.example.mtaafe" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,25 +11,40 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".views.LoginActivity">
+        android:usesCleartextTraffic="true" >
 
-        </activity>
-        <activity android:name=".views.QuestionsListActivity">
+        <activity
+            android:name=".views.SplashScreenActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:noHistory="true">
 
-        </activity>
-        <activity android:name=".views.TagsListActivity">
-
-        </activity>
-        <activity android:name=".views.TagQuestionsListActivity">
-
-        </activity>
-        <activity android:name=".views.UserProfileActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".views.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".views.LoginActivity"
+            android:noHistory="true">
+
+        </activity>
+        <activity android:name=".views.QuestionsListActivity" >
+
+        </activity>
+        <activity android:name=".views.TagsListActivity" >
+
+        </activity>
+        <activity android:name=".views.TagQuestionsListActivity" >
+
+        </activity>
+        <activity android:name=".views.UserProfileActivity" >
+
         </activity>
     </application>
 
