--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity
             android:name=".views.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/AppThemeNoBar">
 
         </activity>
         <activity
@@ -34,7 +34,7 @@
             android:noHistory="true">
 
         </activity>
-        <activity android:name=".views.QuestionsListActivity" >
+        <activity android:name=".views.QuestionsListActivity" android:theme="@style/AppThemeNoBar">
 
         </activity>
         <activity android:name=".views.TagsListActivity" >
