funkcne lave drawer menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <activity
             android:name=".views.SplashScreenActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:theme="@style/AppThemeNoBar"
             android:noHistory="true">
 
             <intent-filter>
@@ -25,25 +25,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".views.MainActivity"
+            android:name=".views.DrawerActivity"
             android:theme="@style/AppThemeNoBar">
 
         </activity>
         <activity
             android:name=".views.LoginActivity"
+            android:theme="@style/AppThemeNoBar"
             android:noHistory="true">
 
         </activity>
         <activity android:name=".views.QuestionsListActivity" android:theme="@style/AppThemeNoBar">
 
         </activity>
-        <activity android:name=".views.TagsListActivity" >
+        <activity android:name=".views.TagsListActivity" android:theme="@style/AppThemeNoBar">
 
         </activity>
         <activity android:name=".views.TagQuestionsListActivity" >
 
         </activity>
-        <activity android:name=".views.UserProfileActivity" >
+        <activity android:name=".views.UserProfileActivity" android:theme="@style/AppThemeNoBar">
 
         </activity>
     </application>
