--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Apr 12 13:32:07 CEST 2021
-sdk.dir=C\:\\Users\\jakub\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
