--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,9 +45,7 @@
 
         </activity>
 
-        <activity
-            android:name=".views.activities.QuestionDetailActivity"
-            android:parentActivityName=".views.activities.QuestionsListActivity">
+        <activity android:name=".views.activities.QuestionDetailActivity">
 
         </activity>
 
